# rules_python

./: .bazelignore  .bazelrc  .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  .readthedocs.yml  .travis.yml  :w  BUILD  BUILD.bazel  BZLMOD_SUPPORT.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  DEVELOPING.md  LICENSE  MODULE.bazel  README.md  RELEASING.md  WORKSPACE  WORKSPACE.bzlmod  __init__.py  addlicense.sh  api_notes.md  defs.bzl  go.bzl  go.mod  go.sum  internal_deps.bzl  internal_dev_deps.bzl  internal_dev_setup.bzl  internal_setup.bzl  main.go  mypy.ini  notes.md  repositories.bzl  requirements.txt  (+4 more)
buildinfo/: BUILD.bazel  bazel_stamp_info.sh  buildinfo.go
cmd/: BUILD.bazel  root.go  version.go  version_test.go
cmd/aspect/: BUILD.bazel  main.go  root.go
cmd/docgen/: BUILD.bazel  README.md  main.go
docs/: BUILD  BUILD.bazel  CNAME  _config.yml  aspect.md  aspect_build.md  aspect_clean.md  aspect_docs.md  aspect_info.md  aspect_test.md  aspect_version.md  conf.py  coverage.md  entry_point.md  environment-variables.md  extending.md  extensions.md  getting-started.md  index.html  index.md  packaging.md  pip.md  pip_repository.md  precompiling.md  py_cc_toolchain.md  py_cc_toolchain_info.md  py_console_script_binary.md  py_entry_point_binary.md  pypi-dependencies.md  pyproject.toml  python.md  requirements.txt  toolchains.md  whl.md
docs/_includes/: py_console_script_binary.md
docs/api/: index.md
docs/cli/: README  index.html
docs/python/: pip.html  pip.md  python.html  python.md  whl.html  whl.md
docs/sphinx/: BUILD.bazel  README.md  _stardoc_footer.md  bazel_inventory.txt  conf.py  coverage.md  getting-started.md  glossary.md  index.md  pip.md  precompiling.md  pypi-dependencies.md  pyproject.toml  readthedocs_build.sh  requirements.in  requirements.txt  requirements_darwin.txt  requirements_linux.txt  support.md  toolchains.md
examples/: BUILD  BUILD.bazel
examples/boto/: BUILD  boto_test.py  requirements.txt
examples/build_file_generation/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  __init__.py  __main__.py  __test__.py  foo_test.py  gazelle_python.yaml  requirements.in  requirements.txt  requirements_lock.txt  requirements_windows.txt
examples/bzlmod/: .bazelrc  .bazelversion  .coveragerc  BUILD.bazel  MODULE.bazel  __init__.py  __main__.py  gazelle_python.yaml  lib.py  pip_repository_annotations_test.py  requirements.in  requirements_lock.txt  requirements_lock_3_10.txt  requirements_lock_3_9.txt  requirements_universal_3_10.txt  requirements_windows.txt  requirements_windows_3_10.txt  requirements_windows_3_9.txt  test.py  transitions.bzl
examples/bzlmod_build_file_generation/: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  __init__.py  gazelle_python.yaml  requirements_lock.txt  requirements_windows.txt
examples/bzlmod_python_src_dir_with_separate_tests_dir/: BUILD.bazel  MODULE.bazel  README.md  gazelle_python.yaml  pyproject.toml
examples/custom_py_project/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE
examples/dataflaw/: BUILD  dataflow.py  dataflow_test.py  requirements.txt
examples/extras/: BUILD  version_test.py
examples/fix-visibility/: .aspectplugins  .gitignore  README.md  WORKSPACE
examples/gcs/: BUILD  gcs_test_missing_dep.py  requirements.txt
examples/helloworld/: BUILD  WORKSPACE  helloworld.py  helloworld_test.py  requirements.txt
examples/legacy_pip_import/: README.md  WORKSPACE
examples/multi_package/: BUILD
examples/multi_python_versions/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE  cross_version_test.py
examples/pip/: .bazelrc  README.md  WORKSPACE
examples/pip_install/: BUILD  BUILD.bazel  README.md  WORKSPACE  entry_point_test.py  main.py  pip_install_test.py  pip_parse_test.py  requirements.in  requirements.txt  requirements_windows.txt  test.py
examples/pip_install_incremental/: BUILD  WORKSPACE  requirements_lock.txt
examples/pip_install_simple/: BUILD  WORKSPACE  main.py  test.py
examples/pip_install_vendored/: README.md  WORKSPACE  requirements.bzl
examples/pip_parse/: .bazelrc  BUILD  BUILD.bazel  MODULE.bazel  WORKSPACE  entry_point_test.py  main.py  pip_parse_test.py  report.txt  requirements.in  requirements.txt  requirements_lock.txt  requirements_windows.txt  test.py
examples/pip_parse_custom_prefix/: BUILD  WORKSPACE  test.py
examples/pip_parse_local_package/: BUILD.bazel  MODULE.bazel  pyproject.toml  requirements_lock.txt  test_hello.py  test_hello_script.sh
examples/pip_parse_vendored/: .bazelrc  BUILD  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-pip_parse_vendored  bazel-testlogs  requirements.bzl  requirements.txt
examples/pip_repository_annotations/: .bazelrc  BUILD  BUILD.bazel  WORKSPACE  pip_repository_annotations_test.py  requirements.in  requirements.txt  requirements_windows.txt
examples/platform_specific_deps/: BUILD.bazel  MODULE.bazel  aarch64-apple-darwin-requirements.txt  aarch64-unknown-linux-gnu-requirements.txt  requirements.in  requirements.txt  test_load.py  x86_64-unknown-linux-gnu-requirements.txt
examples/poetry/: BUILD.bazel  README.md  WORKSPACE.bazel  main.py  pyproject.toml  requirements_linux.txt  requirements_windows.txt
examples/py_import/: BUILD  (+5 more)
gazelle/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  bazel_gazelle.pr1095.patch  configure.go  def.bzl  deps.bzl  fix.go  generate.go  go.mod  go.sum  kinds.go  language.go  parse.py  parser.go  python_test.go  resolve.go  std_modules.go  std_modules.py  target.go
private/: BUILD.bazel
release/: BUILD.bazel  create_release.sh  release.bzl
sphinxdocs/: BUILD.bazel  func_template.vm  header_template.vm  provider_template.vm  readthedocs.bzl  sphinx.bzl  sphinx_server.py  sphinx_stardoc.bzl
src.d/: BUILD.bazel  README.md  __init__.py
tests/: BUILD  BUILD.bazel  cc_info_subject.bzl  integration_test.bzl  py_cc_toolchain_info_subject.bzl  py_runtime_info_subject.bzl  pypiserver.py  struct_subject.bzl  test_env.bzl
(+1550 files in other folders)
