load("@bazel_gazelle//:def.bzl", "gazelle")

# TODO: follow https://sagikazarmark.hu/blog/vanity-import-paths-in-go/
# so we have savvy go imports for users
# gazelle:prefix aspect.build/cli
gazelle(name = "gazelle")

gazelle(
    name = "update_go_deps",
    args = [
        "-from_file=go.mod",
        "-to_macro=go.bzl%deps",
        "-prune",
    ],
    command = "update-repos",
)

alias(
    name = "aspect",
    actual = "//cmd/aspect",
)
