load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cmd",
    srcs = [
        "root.go",
        "version.go",
    ],
    importpath = "aspect.build/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//buildinfo",
        "@com_github_fatih_color//:color",
        "@com_github_mattn_go_isatty//:go-isatty",
        "@com_github_mitchellh_go_homedir//:go-homedir",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)

go_test(
    name = "cmd_test",
    srcs = ["version_test.go"],
    embed = [":cmd"],
    deps = [
        "@com_github_spf13_cobra//:cobra",
        "@com_github_stretchr_testify//assert",
    ],
)
